cabal-version:       2.4

name:                numeric-reflect
version:             0.1.0.0
synopsis:            Reflection of Numerical Expressions with Variables
description:         Reflection of Numerical Expressions with Variables
homepage:            https://github.com/traviswhitaker/numeric-reflect
bug-reports:         https://github.com/traviswhitaker/numeric-reflect
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2019
category:            Debug
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Debug.Reflect
  -- other-modules:
  -- other-extensions:
  build-depends:       base == 4.12.*
  hs-source-dirs:      src
  default-language:    Haskell2010
